# claudecode-antigravity-auth

./: .env.example  .gitignore  ANTIGRAVITY_FIX.md  ARCHITECTURE.md  CLAUDE.md  FIXES_SUMMARY.md  HANDOVER.md  README.md  antigravity_client.py  plan.md  pyproject.toml  quota_manager.py  requirements.txt  run.sh  server.py
.archived/: HANDOVER_NOTES.md
docs/: IMPLEMENTATION_PLAN.md  LLD.md  RUNNING_NOTES.md
gclaude/: __init__.py  auth.py  cli.py  config.py  detector.py  server.py  shell.py  utils.py
gclaude/proxy/: __init__.py  antigravity_client.py  quota_manager.py  server.py
gemini-for-claude-code/: ANTIGRAVITY.md  ANTIGRAVITY_FIX.md  CLAUDE.md  HANDOVER.md  PLAN.md  README.md  antigravity_auth.py  quota_manager.py  server.py
gemini-for-claude-code/.claude/: ralph-loop.local.md
gemini-for-claude-code/gclaude/: __main__.py  config.py  server.py
scripts/: install.sh
