[project]
name = "gclaude"
version = "1.0.0"
description = "Gemini → Claude Code Proxy with Antigravity OAuth"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "gclaude contributors"}
]
keywords = ["claude", "gemini", "antigravity", "proxy", "oauth"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth>=2.20.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
gclaude = "gclaude.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gclaude*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
